output/java_grammarParser.py
# Generated from java_grammar.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class java_grammarParser ( Parser ):

    grammarFileName = "java_grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'ArrayList'", "'LinkedList'", "'HashSet'", 
                     "'HashMap'", "'if'", "'else'", "'switch'", "'case'", 
                     "'while'", "'for'", "'break'", "'continue'", "'do'", 
                     "'class'", "'interface'", "'enum'", "'public'", "'private'", 
                     "'protected'", "'static'", "'final'", "'abstract'", 
                     "'default'", "'extends'", "'implements'", "'volataile'", 
                     "'throws'", "'System.out.print'", "'System.out.println'", 
                     "'Scanner'", "'next'", "'true'", "'false'", "'null'", 
                     "'throw'", "'try'", "'catch'", "'finally'", "'new'", 
                     "'this'", "'return'", "'assert'", "'import'", "'package'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'('", "')'", "'{'", 
                     "'}'", "'['", "']'", "'=='", "'!='", "'>'", "'<'", 
                     "'>='", "'<='", "'&&'", "'||'", "'!'", "'++'", "'--'", 
                     "'='", "'+='", "'-='", "'*='", "'/='", "'%='", "':'", 
                     "';'", "'.'", "','", "'void'", "'int'", "'float'", 
                     "'double'", "'long'", "'short'", "'byte'", "'char'", 
                     "'boolean'", "'String'" ]

    symbolicNames = [ "<INVALID>", "ARRAYLIST", "LINKEDLIST", "HASHSET", 
                      "HASHMAP", "IF", "ELSE", "SWITCH", "CASE", "WHILE", 
                      "FOR", "BREAK", "CONTINUE", "DO", "CLASS", "INTERFACE", 
                      "ENUM", "PUBLIC", "PRIVATE", "PROTECTED", "STATIC", 
                      "FINAL", "ABSTRACT", "DEFAULT", "EXTENDS", "IMPLEMENTS", 
                      "VOLATAILE", "THROWS", "PRINT", "PRINTLN", "SCANNER", 
                      "NEXT", "TRUE", "FALSE", "NULL", "THROW", "TRY", "CATCH", 
                      "FINALLY", "NEW", "THIS", "RETURN", "ASSERT", "IMPORT", 
                      "PACKAGE", "ADD", "SUB", "MUL", "DIV", "MOD", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "LSQUARE", "RSQUARE", 
                      "EQUAL", "NOT_EQUAL", "GREATER_THAN", "LESS_THAN", 
                      "GREATER_THAN_OR_EQUAL", "LESS_THAN_OR_EQUAL", "LOGICAL_AND", 
                      "LOGICAL_OR", "LOGICAL_NOT", "INCREMENT", "DECREMENT", 
                      "ASSIGN", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", 
                      "DIV_ASSIGN", "MOD_ASSIGN", "COLON", "SEMICOLON", 
                      "DOT", "COMMA", "VOID", "INT", "FLOAT", "DOUBLE", 
                      "LONG", "SHORT", "BYTE", "CHAR", "BOOLEAN", "STRING", 
                      "ID", "INTEGER_NUMBER", "FLOAT_NUMBER", "STRING_TEXT", 
                      "CHARACTER", "WHITESPACES", "BLOCKCOMMENT", "SINGLELINECOMMENT" ]

    RULE_program = 0
    RULE_importDeclaration = 1
    RULE_packageDeclaration = 2
    RULE_structerDeclaration = 3
    RULE_classDeclaration = 4
    RULE_classBody = 5
    RULE_superClass = 6
    RULE_interfaces = 7
    RULE_classMemberDeclaration = 8
    RULE_enumDeclaration = 9
    RULE_enumBody = 10
    RULE_interfaceDeclaration = 11
    RULE_interfaceBody = 12
    RULE_interfaceMemberDeclaration = 13
    RULE_fieldDeclaration = 14
    RULE_methodDeclaration = 15
    RULE_throwedExeption = 16
    RULE_formalParameters = 17
    RULE_formalParameter = 18
    RULE_methodBody = 19
    RULE_block = 20
    RULE_blockStatement = 21
    RULE_variableDeclarators = 22
    RULE_statement = 23
    RULE_ifStatement = 24
    RULE_whileStatement = 25
    RULE_doWhileStatement = 26
    RULE_forStatement = 27
    RULE_forControl = 28
    RULE_traditionalForControl = 29
    RULE_forInit = 30
    RULE_forUpdate = 31
    RULE_enhancedForControl = 32
    RULE_switchStatement = 33
    RULE_switchBlock = 34
    RULE_switchBlockStatementGroup = 35
    RULE_switchLabel = 36
    RULE_tryStatement = 37
    RULE_catchClause = 38
    RULE_catchFormalParameter = 39
    RULE_finallyBlock = 40
    RULE_returnStatement = 41
    RULE_breakStatement = 42
    RULE_continueStatement = 43
    RULE_throwStatement = 44
    RULE_expression = 45
    RULE_logicalExpression = 46
    RULE_logicalTerm = 47
    RULE_unaryLogicalExpression = 48
    RULE_logicalOperator = 49
    RULE_arithmeticExpression = 50
    RULE_arithmeticTerm = 51
    RULE_unaryArithmeticExpression = 52
    RULE_arithmeticOperator = 53
    RULE_assignmentStatement = 54
    RULE_assignmentOperator = 55
    RULE_literal = 56
    RULE_newInstance = 57
    RULE_incrementStatement = 58
    RULE_decrementStatement = 59
    RULE_functionCall = 60
    RULE_type = 61
    RULE_dataType = 62
    RULE_modifiers = 63
    RULE_modifier = 64
    RULE_classModifiers = 65
    RULE_classModifier = 66
    RULE_dataStructerDeclaration = 67
    RULE_dataStructers = 68
    RULE_printStatement = 69
    RULE_inputStatement = 70
    RULE_extendedIDwithThis = 71
    RULE_extendedID = 72

    ruleNames =  [ "program", "importDeclaration", "packageDeclaration", 
                   "structerDeclaration", "classDeclaration", "classBody", 
                   "superClass", "interfaces", "classMemberDeclaration", 
                   "enumDeclaration", "enumBody", "interfaceDeclaration", 
                   "interfaceBody", "interfaceMemberDeclaration", "fieldDeclaration", 
                   "methodDeclaration", "throwedExeption", "formalParameters", 
                   "formalParameter", "methodBody", "block", "blockStatement", 
                   "variableDeclarators", "statement", "ifStatement", "whileStatement", 
                   "doWhileStatement", "forStatement", "forControl", "traditionalForControl", 
                   "forInit", "forUpdate", "enhancedForControl", "switchStatement", 
                   "switchBlock", "switchBlockStatementGroup", "switchLabel", 
                   "tryStatement", "catchClause", "catchFormalParameter", 
                   "finallyBlock", "returnStatement", "breakStatement", 
                   "continueStatement", "throwStatement", "expression", 
                   "logicalExpression", "logicalTerm", "unaryLogicalExpression", 
                   "logicalOperator", "arithmeticExpression", "arithmeticTerm", 
                   "unaryArithmeticExpression", "arithmeticOperator", "assignmentStatement", 
                   "assignmentOperator", "literal", "newInstance", "incrementStatement", 
                   "decrementStatement", "functionCall", "type", "dataType", 
                   "modifiers", "modifier", "classModifiers", "classModifier", 
                   "dataStructerDeclaration", "dataStructers", "printStatement", 
                   "inputStatement", "extendedIDwithThis", "extendedID" ]

    EOF = Token.EOF
    ARRAYLIST=1
    LINKEDLIST=2
    HASHSET=3
    HASHMAP=4
    IF=5
    ELSE=6
    SWITCH=7
    CASE=8
    WHILE=9
    FOR=10
    BREAK=11
    CONTINUE=12
    DO=13
    CLASS=14
    INTERFACE=15
    ENUM=16
    PUBLIC=17
    PRIVATE=18
    PROTECTED=19
    STATIC=20
    FINAL=21
    ABSTRACT=22
    DEFAULT=23
    EXTENDS=24
    IMPLEMENTS=25
    VOLATAILE=26
    THROWS=27
    PRINT=28
    PRINTLN=29
    SCANNER=30
    NEXT=31
    TRUE=32
    FALSE=33
    NULL=34
    THROW=35
    TRY=36
    CATCH=37
    FINALLY=38
    NEW=39
    THIS=40
    RETURN=41
    ASSERT=42
    IMPORT=43
    PACKAGE=44
    ADD=45
    SUB=46
    MUL=47
    DIV=48
    MOD=49
    LPAREN=50
    RPAREN=51
    LBRACE=52
    RBRACE=53
    LSQUARE=54
    RSQUARE=55
    EQUAL=56
    NOT_EQUAL=57
    GREATER_THAN=58
    LESS_THAN=59
    GREATER_THAN_OR_EQUAL=60
    LESS_THAN_OR_EQUAL=61
    LOGICAL_AND=62
    LOGICAL_OR=63
    LOGICAL_NOT=64
    INCREMENT=65
    DECREMENT=66
    ASSIGN=67
    ADD_ASSIGN=68
    SUB_ASSIGN=69
    MUL_ASSIGN=70
    DIV_ASSIGN=71
    MOD_ASSIGN=72
    COLON=73
    SEMICOLON=74
    DOT=75
    COMMA=76
    VOID=77
    INT=78
    FLOAT=79
    DOUBLE=80
    LONG=81
    SHORT=82
    BYTE=83
    CHAR=84
    BOOLEAN=85
    STRING=86
    ID=87
    INTEGER_NUMBER=88
    FLOAT_NUMBER=89
    STRING_TEXT=90
    CHARACTER=91
    WHITESPACES=92
    BLOCKCOMMENT=93
    SINGLELINECOMMENT=94

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PUBLIC(self):
            return self.getToken(java_grammarParser.PUBLIC, 0)

        def importDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(java_grammarParser.ImportDeclarationContext)
            else:
                return self.getTypedRuleContext(java_grammarParser.ImportDeclarationContext,i)


        def packageDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(java_grammarParser.PackageDeclarationContext)
            else:
                return self.getTypedRuleContext(java_grammarParser.PackageDeclarationContext,i)


        def structerDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(java_grammarParser.StructerDeclarationContext)
            else:
                return self.getTypedRuleContext(java_grammarParser.StructerDeclarationContext,i)


        def getRuleIndex(self):
            return java_grammarParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = java_grammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==43 or _la==44:
                self.state = 148
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [43]:
                    self.state = 146
                    self.importDeclaration()
                    pass
                elif token in [44]:
                    self.state = 147
                    self.packageDeclaration()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 153
            self.match(java_grammarParser.PUBLIC)
            self.state = 155 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 154
                self.structerDeclaration()
                self.state = 157 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 14794752) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(java_grammarParser.IMPORT, 0)

        def extendedID(self):
            return self.getTypedRuleContext(java_grammarParser.ExtendedIDContext,0)


        def SEMICOLON(self):
            return self.getToken(java_grammarParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return java_grammarParser.RULE_importDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportDeclaration" ):
                listener.enterImportDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportDeclaration" ):
                listener.exitImportDeclaration(self)




    def importDeclaration(self):

        localctx = java_grammarParser.ImportDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_importDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(java_grammarParser.IMPORT)
            self.state = 160
            self.extendedID()
            self.state = 161
            self.match(java_grammarParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PackageDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PACKAGE(self):
            return self.getToken(java_grammarParser.PACKAGE, 0)

        def extendedID(self):
            return self.getTypedRuleContext(java_grammarParser.ExtendedIDContext,0)


        def SEMICOLON(self):
            return self.getToken(java_grammarParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return java_grammarParser.RULE_packageDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackageDeclaration" ):
                listener.enterPackageDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackageDeclaration" ):
                listener.exitPackageDeclaration(self)




    def packageDeclaration(self):

        localctx = java_grammarParser.PackageDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_packageDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(java_grammarParser.PACKAGE)
            self.state = 164
            self.extendedID()
            self.state = 165
            self.match(java_grammarParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructerDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDeclaration(self):
            return self.getTypedRuleContext(java_grammarParser.ClassDeclarationContext,0)


        def interfaceDeclaration(self):
            return self.getTypedRuleContext(java_grammarParser.InterfaceDeclarationContext,0)


        def enumDeclaration(self):
            return self.getTypedRuleContext(java_grammarParser.EnumDeclarationContext,0)


        def getRuleIndex(self):
            return java_grammarParser.RULE_structerDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructerDeclaration" ):
                listener.enterStructerDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructerDeclaration" ):
                listener.exitStructerDeclaration(self)




    def structerDeclaration(self):

        localctx = java_grammarParser.StructerDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_structerDeclaration)
        try:
            self.state = 170
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.classDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 168
                self.interfaceDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 169
                self.enumDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(java_grammarParser.CLASS, 0)

        def ID(self):
            return self.getToken(java_grammarParser.ID, 0)

        def classBody(self):
            return self.getTypedRuleContext(java_grammarParser.ClassBodyContext,0)


        def classModifiers(self):
            return self.getTypedRuleContext(java_grammarParser.ClassModifiersContext,0)


        def superClass(self):
            return self.getTypedRuleContext(java_grammarParser.SuperClassContext,0)


        def interfaces(self):
            return self.getTypedRuleContext(java_grammarParser.InterfacesContext,0)


        def getRuleIndex(self):
            return java_grammarParser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)




    def classDeclaration(self):

        localctx = java_grammarParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 14680064) != 0):
                self.state = 172
                self.classModifiers()


            self.state = 175
            self.match(java_grammarParser.CLASS)
            self.state = 176
            self.match(java_grammarParser.ID)
            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==24:
                self.state = 177
                self.superClass()


            self.state = 181
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==25:
                self.state = 180
                self.interfaces()


            self.state = 183
            self.classBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(java_grammarParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(java_grammarParser.RBRACE, 0)

        def classMemberDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(java_grammarParser.ClassMemberDeclarationContext)
            else:
                return self.getTypedRuleContext(java_grammarParser.ClassMemberDeclarationContext,i)


        def getRuleIndex(self):
            return java_grammarParser.RULE_classBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassBody" ):
                listener.enterClassBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassBody" ):
                listener.exitClassBody(self)




    def classBody(self):

        localctx = java_grammarParser.ClassBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_classBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self.match(java_grammarParser.LBRACE)
            self.state = 189
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 83804190) != 0) or ((((_la - 77)) & ~0x3f) == 0 and ((1 << (_la - 77)) & 1023) != 0):
                self.state = 186
                self.classMemberDeclaration()
                self.state = 191
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 192
            self.match(java_grammarParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SuperClassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXTENDS(self):
            return self.getToken(java_grammarParser.EXTENDS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(java_grammarParser.ID)
            else:
                return self.getToken(java_grammarParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(java_grammarParser.COMMA)
            else:
                return self.getToken(java_grammarParser.COMMA, i)

        def getRuleIndex(self):
            return java_grammarParser.RULE_superClass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSuperClass" ):
                listener.enterSuperClass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSuperClass" ):
                listener.exitSuperClass(self)




    def superClass(self):

        localctx = java_grammarParser.SuperClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_superClass)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 194
            self.match(java_grammarParser.EXTENDS)
            self.state = 195
            self.match(java_grammarParser.ID)
            self.state = 200
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==76:
                self.state = 196
                self.match(java_grammarParser.COMMA)
                self.state = 197
                self.match(java_grammarParser.ID)
                self.state = 202
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InterfacesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPLEMENTS(self):
            return self.getToken(java_grammarParser.IMPLEMENTS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(java_grammarParser.ID)
            else:
                return self.getToken(java_grammarParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(java_grammarParser.COMMA)
            else:
                return self.getToken(java_grammarParser.COMMA, i)

        def getRuleIndex(self):
            return java_grammarParser.RULE_interfaces

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterfaces" ):
                listener.enterInterfaces(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterfaces" ):
                listener.exitInterfaces(self)




    def interfaces(self):
